sample fixes for JDK 22 Panama API changes.